--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
   </head>
   <body>
     <div>
-      <input onclick="dark()" type="checkbox" class="checkbox" id="check" />
-      <label class="label" for="check">
-        <img src="assets/moon.svg" alt="moon" />
+      <input
+        value=""
+        onclick="dark()"
+        type="checkbox"
+        class="checkbox"
+        id="checkTheme"
+      />
+      <label class="label" for="checkTheme">
         <img src="assets/sun.svg" alt="sun" />
-        <div class="ball"></div>
+        <img src="assets/moon.svg" alt="moon" />
+        <div id="ball"></div>
       </label>
     </div>
     <script src="main.js"></script>
