--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,6 +13,7 @@
     <title>Theme Switcher</title>
   </head>
   <body>
+    <p>Theme Switcher</p>
     <div>
       <input
         value=""
@@ -29,9 +30,4 @@
     </div>
     <script src="main.js"></script>
   </body>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa itaque iusto
-    ut recusandae porro provident non voluptatem consequuntur! Ab rem architecto
-    culpa corrupti sed cum rerum molestias labore aut omnis!
-  </p>
 </html>
